# queue-processor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yml  justfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
src/: QueueProcessor.py  check_queues.py  delete_queues.py  service_mock.py
src/queue_processor/: QueueProcess.py  QueueProcessResults.py  QueueProcessor.py
src/tests/: test_queue_processor.py
