[project]
name = "queue-processor"
version = "2025.03.24.01"
description = "Manage queues on Uwazi services"
license = { file = "LICENSE" }
authors = [{ name = "HURIDOCS" }]
requires-python = ">= 3.10"
dependencies = [
    "PyRSMQ==0.6.0",
    "redis==5.0.7",
    "setuptools==75.4.0",
    "pydantic==2.10.6"
]

[project.urls]
HURIDOCS = "https://huridocs.org"
GitHub = "https://github.com/huridocs/queue-processor"