[project]
name = "queue-processor"
version = "2025.03.24.02"
description = "Manage queues on Uwazi services"
license = { file = "LICENSE" }
authors = [{ name = "HURIDOCS" }]
requires-python = ">= 3.10"
dependencies = [
    "PyRSMQ==0.6.0",
    "redis==5.0.7",
    "setuptools==75.4.0",
    "pydantic==2.11.0"
]

[project.urls]
HURIDOCS = "https://huridocs.org"
GitHub = "https://github.com/huridocs/queue-processor"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "_version.py"